objects/Product_Breakout__c.object
<CustomObject>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Media: Ad Sales</fullName>
                </value>
                <value>
                    <fullName>Media: Agency</fullName>
                </value>
                <value>
                    <fullName>Media: Analytics</fullName>
                </value>
                <value>
                    <fullName>Media: Program Scheduling</fullName>
                </value>
                <value>
                    <fullName>Media: Punctuate</fullName>
                </value>
                <value>
                    <fullName>Media: Traffic and Billing</fullName>
                </value>
                <value>
                    <fullName>Networking: Command and Control</fullName>
                </value>
                <value>
                    <fullName>Networking: Compress and Transport</fullName>
                </value>
                <value>
                    <fullName>Networking: Multiviewers</fullName>
                </value>
                <value>
                    <fullName>Networking: Processing</fullName>
                </value>
                <value>
                    <fullName>Networking: Routing Switchers</fullName>
                </value>
                <value>
                    <fullName>Networking: T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Playout: Asset Management</fullName>
                </value>
                <value>
                    <fullName>Playout: Automation</fullName>
                </value>
                <value>
                    <fullName>Playout: Editing</fullName>
                </value>
                <value>
                    <fullName>Playout: Graphics</fullName>
                </value>
                <value>
                    <fullName>Playout: Infocaster</fullName>
                </value>
                <value>
                    <fullName>Playout: Integrated Playout</fullName>
                </value>
                <value>
                    <fullName>Playout: Master Control and Brand</fullName>
                </value>
                <value>
                    <fullName>Playout: Media Server</fullName>
                </value>
                <value>
                    <fullName>Playout: Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Breakout</relationshipLabel>
        <relationshipName>Product_Breakout</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Breakout_Amount__c</fullName>
        <label>Product Breakout Amount</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_of_Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1RU Processing</fullName>
                </value>
                <value>
                    <fullName>6800</fullName>
                </value>
                <value>
                    <fullName>ADC</fullName>
                </value>
                <value>
                    <fullName>ASG Other</fullName>
                </value>
                <value>
                    <fullName>AdConnections</fullName>
                </value>
                <value>
                    <fullName>Adtraq</fullName>
                </value>
                <value>
                    <fullName>Asset Mgmt</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Broadcast Master</fullName>
                </value>
                <value>
                    <fullName>Clock_Sync_Test</fullName>
                </value>
                <value>
                    <fullName>Compressed Domain</fullName>
                </value>
                <value>
                    <fullName>Config &amp; Control</fullName>
                </value>
                <value>
                    <fullName>D-Series</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>Demodulators</fullName>
                </value>
                <value>
                    <fullName>EAS</fullName>
                </value>
                <value>
                    <fullName>Editing &amp; Prodn</fullName>
                </value>
                <value>
                    <fullName>Fiber</fullName>
                </value>
                <value>
                    <fullName>Handhelds</fullName>
                </value>
                <value>
                    <fullName>ICE</fullName>
                </value>
                <value>
                    <fullName>IRD</fullName>
                </value>
                <value>
                    <fullName>Infocaster</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Landmark</fullName>
                </value>
                <value>
                    <fullName>Larger Routers</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>MCP-Compression</fullName>
                </value>
                <value>
                    <fullName>MCP-Processing</fullName>
                </value>
                <value>
                    <fullName>MPEG Monitoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Breakout</label>
    <nameField>
        <displayFormat>PB-{00}</displayFormat>
        <label>Product Breakout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Breakout</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>